# dspy

./: README.md  prepare_avon_bundle.sh  pyproject.toml  rsync_exclude.txt
env/: requirements.txt
evaluation_check/: base_latency_fees.json  base_stats.py  evaluation_check_base.sh  evaluation_check_sensitivity.sh  latency_fees_sensitivity.py  sensitivity_latency_fees.json
examples/: bybit-connect.ipynb  dataloading.ipynb
logs/20250729_200220/: 2025-04-01_00-00-00__2025-04-02_12-59-59.csv
logs/20250729_222504/: 2025-04-01_00-00-00__2025-04-02_12-59-59.csv
notebooks/: Untitled.ipynb  feature_selection.ipynb  feature_selection.py  feature_selection_test.py  final_features  testing.py  testing_copy.ipynb
notebooks/.ipynb_checkpoints/: feature_selection-checkpoint.ipynb  testing-checkpoint.ipynb  testing_copy-checkpoint.ipynb
run/: features copy.json  features.json  features_1.json  features_bk.json  features_list_selection.json  run_config.json  run_simulation.py  run_simulation_tester.py  run_with_threads.sh  train_dqn_config.json
run/.ipynb_checkpoints/: IMC_cardgame-checkpoint.ipynb  Untitled-checkpoint.ipynb
scripts/: avon_preflight.py  run_sim_cpu.sbatch  run_sim_gpu.sbatch
src/dspy/: __init__.py  polars_extensions.py  positions.py  utils.py
src/dspy/agents/: agent_utils.py
src/dspy/api/: __init__.py  api_registry.py  base.py
src/dspy/features/: __init__.py  bars.py  book_features.py  feature_registry.py  feature_utils.py  signal_pnl.py  trade_features.py  utils.py  volatility.py
src/dspy/hdb/: __init__.py  base.py  bybit_dataloader.py  (+2 more)
(+74 files in other folders)
